--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "firebase": "12.6.0"
   },
   "devDependencies": {
-    "@types/react": "18.0.0",
-    "@types/react-dom": "18.0.0",
+ "devDependencies": {
+    "ajv": "^8.12.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "loader-utils": "3.2.1",
     "typescript": "5.7.2"
   },
