--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "react",
+  "name": "alfa-partners",
   "version": "1.0.0",
-  "description": "",
-  "keywords": [],
-  "main": "src/index.tsx",
+  "private": true,
   "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-scripts": "^5.0.0",
+    "firebase": "12.6.0",
     "lucide-react": "0.555.0",
-    "firebase": "12.6.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1"
   },
   "devDependencies": {
- "devDependencies": {
     "ajv": "^8.12.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
@@ -22,7 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "browserslist": [
